fixed content alignment

--- a/assignments/lesson-6/styles/medium-6.css
+++ b/assignments/lesson-6/styles/medium-6.css
@@ -18,8 +18,11 @@ article p.town-article { display: inline-block; }
 
 /*----------- HEADER --------------*/
     
-
-
+header, nav, main, section, footer { /* the comma means apply the following CSS declarations to all of the listed elements */
+    max-width: 64rem;
+    margin: auto;
+    
+ }
 /*----------- NAVIGATION --------------*/
   
   
